fix(unity-bootstrap-theme): fixed pixel clipping in hero headings

--- a/packages/unity-bootstrap-theme/src/scss/extends/_headings.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_headings.scss
@@ -55,7 +55,7 @@ h1, .h1 {
   letter-spacing: $heading-one-letter-spacing;
 
   span[class^='highlight-'] {
-    padding: 1px 0;
+    padding: .5px 0;
   }
 
   &.article {
